--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 3.3
+ * @version 3.4
 */
 
 .app_a01fb1 {
@@ -561,7 +561,13 @@
 
 .userProfileInnerThemedWithBanner_c69a7b,
 .userProfileInnerThemedNonPremium_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b,
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
 }
 
@@ -577,7 +583,8 @@
     display: none;
 }
 
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -604,7 +611,8 @@
     background-color: rgba(149, 168, 176, .5);
 }
 
-.role_e4010c {
+.role_e4010c,
+#app-mount .role_f9575e {
     font-size: 13px;
     background: rgba(149, 168, 176, .5);
     border-radius: 8px;
@@ -612,7 +620,8 @@
     padding: 5px;
 }
 
-.roleName_e4010c {
+.roleName_e4010c,
+.roleName_f9575e {
     color: white;
 }
 
@@ -1192,7 +1201,7 @@
     border: 1px solid rgba(0, 0, 0, .4);
 }
 
-.tabBarContainer_b9fccc {
+.tabBar_c1519f {
     border-bottom: none;
 }
 
@@ -1221,7 +1230,8 @@
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: black;
 }
 
@@ -1395,13 +1405,13 @@
     padding: 1px 4px;
 }
 
-.theme-dark .wrapper_a7c28c {
+.theme-dark .wrapper_bf1b19 {
     background: rgba(149, 168, 176, .2);
     color: #D0DFFF;
     text-decoration: none !important;
 }
 
-.theme-dark .wrapper_a7c28c:hover {
+.theme-dark .wrapper_bf1b19:hover {
     background: rgba(149, 168, 176, .4);
     color: white;
 }
