--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 3.5
+ * @version 3.6
 */
 
 /* Ram Main Picture */
@@ -263,7 +263,13 @@
 
 .userProfileInnerThemedWithBanner_c69a7b,
 .userProfileInnerThemedNonPremium_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b,
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background-image: linear-gradient(30deg, rgba(0,0,0,.6), rgba(0,0,0,.4)), url(https://images7.alphacoders.com/711/711890.png);
     background-size: cover;
     background-position: 50% 50%;
@@ -297,7 +303,8 @@
     border-radius: 4px;
 }
 
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: rgba(0,0,0,.7);
     border-radius: 4px;
 }
@@ -1222,7 +1229,7 @@
     padding: 0 6px;
 }
 
-.theme-dark .wrapper_a7c28c {
+.theme-dark .wrapper_bf1b19 {
     background: rgba(243, 172, 197, .7) !important;
     color: white;
     text-decoration: none !important;
@@ -1230,7 +1237,7 @@
     border: 2px solid rgba(255, 255, 255, .37);
 }
 
-.theme-dark .wrapper_a7c28c:hover {
+.theme-dark .wrapper_bf1b19:hover {
     background: #f3acc5;
     color: white;
 }
@@ -1642,7 +1649,7 @@ button.button_f67531.enabled_f67531:hover {
     border-radius: 4px;
 }
 
-.tabBarContainer_b9fccc {
+.tabBar_c1519f {
     border-bottom: none;
 }
 
@@ -2344,7 +2351,8 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #f3acc5;
 }
 
-.role_e4010c {
+.role_e4010c,
+#app-mount .role_f9575e {
     font-size: 13px;
     background: rgba(243, 172, 197, .5);
     height: 24px;
@@ -2352,6 +2360,7 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .roleName_e4010c,
+.roleName_f9575e,
 .actionButton_e4010c {
     color: white;
 }
@@ -3052,7 +3061,8 @@ button.button_f67531.enabled_f67531:hover {
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: rgba(0, 0, 0, .6);
 }
 
