--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 3
+ * @version 3.1
 */
 
 .app_a01fb1, 
@@ -297,13 +297,13 @@
     padding: 1px 6px;
 }
 
-.wrapper_a7c28c {
+.wrapper_bf1b19 {
     color: #F1F1F1;
     background: rgba(255, 255, 255, .1);
     text-decoration: none !important;
 }
 
-.wrapper_a7c28c:hover {
+.wrapper_bf1b19:hover {
     color: #F1F1F1;
     background: rgba(255, 255, 255, .2);
 }
@@ -351,13 +351,15 @@
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: rgba(0, 0, 0, .2);
 }
 
 .userProfileOuterUnthemed_c69a7b,
 .userProfileInner_c69a7b:before,
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
@@ -369,13 +371,19 @@
     border-radius: 8px;
 }
 
-.userProfileInnerThemedNonPremium_c69a7b {
+.userProfileInnerThemedNonPremium_c69a7b,
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b {
     background-color: #282828;
     background: #282828;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background-color: #282828;
     background: #282828;
 }
@@ -418,7 +426,8 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.role_e4010c {
+.role_e4010c,
+#app-mount .role_f9575e {
     background: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .1) !important;
     border-radius: 30px;
@@ -455,7 +464,7 @@
     background: none;
 }
 
-.tabBarContainer_b9fccc {
+.tabBar_c1519f {
     border-bottom: none;
 }
 
