--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 5.7
+ * @version 5.8
  */
 
 /* Main Background */
@@ -922,7 +922,8 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
@@ -947,12 +948,18 @@
     background-color: transparent;
 }
 
-.userProfileInnerThemedNonPremium_c69a7b {
+.userProfileInnerThemedNonPremium_c69a7b,
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
@@ -1627,12 +1634,12 @@
     padding: 0 2px;
 }
 
-.theme-dark .wrapper_a7c28c {
+.theme-dark .wrapper_bf1b19 {
     background: #2AB;
     color: white;
 }
 
-.theme-dark .wrapper_a7c28c:hover {
+.theme-dark .wrapper_bf1b19:hover {
     background-image: -webkit-linear-gradient(90deg, #000000 5%, #22a9bb 100%);
 }
 
@@ -3161,7 +3168,8 @@
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: rgba(0, 0, 0, .6);
 }
 
@@ -3169,6 +3177,7 @@
 .userTagWithNickname_c9ccf6,
 .discordIcon_b06bc5,
 .roleName_e4010c,
+.roleName_f9575e,
 .username_be84f0,
 .actionButton_e4010c {
     color: white;
