--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 5.9
+ * @version 6
  */
 
 /* Main Background */
@@ -1224,14 +1224,14 @@
     color: silver;
 }
 
-.theme-dark .wrapper_a7c28c {
+.theme-dark .wrapper_bf1b19 {
     background: rgba(255, 68, 68, .4);
     color: white;
     border-radius: 3px;
     transition: background .2s ease, border-radius .2s ease;
 }
 
-.theme-dark .wrapper_a7c28c:hover {
+.theme-dark .wrapper_bf1b19:hover {
     background: rgba(255, 68, 68, .9);
     border-radius: 7px;
 }
@@ -1459,7 +1459,8 @@
     background-color: transparent;
 }
 
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
@@ -1475,13 +1476,19 @@
     border-radius: 6px;
 }
 
-.userProfileInnerThemedNonPremium_c69a7b {
+.userProfileInnerThemedNonPremium_c69a7b,
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b {
     background-color: rgba(0, 0, 0, .5);
     background: none;
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background: rgba(0, 0, 0, .5);
 }
 
@@ -2452,7 +2459,8 @@ button.button_f67531 {
     color: white;
 }
 
-.role_e4010c {
+.role_e4010c,
+#app-mount .role_f9575e {
     font-size: 14px;
     background: rgba(0, 0, 0, .33);
     border: 1px solid #f44;
@@ -3441,7 +3449,8 @@ button.button_f67531.enabled_f67531:hover {
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: rgba(0, 0, 0, .6);
 }
 
@@ -3449,6 +3458,7 @@ button.button_f67531.enabled_f67531:hover {
 .userTagWithNickname_c9ccf6,
 .discordIcon_b06bc5,
 .roleName_e4010c,
+.roleName_f9575e,
 .username_be84f0 {
     color: white;
 }
