--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 5.7
+ * @version 5.8
 */
 
 .avatarDecoration_ec86aa {
@@ -950,7 +950,7 @@ textarea,
     top: -1px;
 }
 
-.tabBarContainer_b9fccc {
+.tabBar_c1519f {
     border-top: none;
 }
 
@@ -982,7 +982,8 @@ textarea,
 
 .profileBadges_f89da9,
 .badgeList_b69b77,
-.badgeList_ec3b75 {
+.badgeList_ec3b75,
+#app-mount .container_e5a42d {
     background-color: rgba(0, 0, 0, .6);
 }
 
@@ -1376,7 +1377,7 @@ textarea,
     background-color: rgba(0, 140, 153, 0.776);
 }
 
-.theme-dark .wrapper_a7c28c {
+.theme-dark .wrapper_bf1b19 {
     color: white;
     background-color: rgba(0, 140, 153, 0.276);
 }
@@ -2387,7 +2388,8 @@ textarea,
     background-color: rgba(0, 0, 0, .2);
 }
 
-.overlayBackground_c69a7b {
+.overlayBackground_c69a7b,
+#app-mount .fullSizeOverlayBackground_c69a7b {
     background-color: transparent;
 }
 
@@ -2411,12 +2413,18 @@ textarea,
     background-color: transparent;
 }
 
-.userProfileInnerThemedNonPremium_c69a7b {
+.userProfileInnerThemedNonPremium_c69a7b,
+.biteSizeInnerThemed_c69a7b,
+.fullSizeInnerThemed_c69a7b {
     background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #008c99 100%);
 }
 
 .userProfileInnerThemedWithBanner_c69a7b,
-.userProfileInnerThemedPremiumWithoutBanner_c69a7b {
+.userProfileInnerThemedPremiumWithoutBanner_c69a7b,
+.biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBannerPremium_c3e427),
+.fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBannerPremium_c3e427),
+.custom-profile-theme .biteSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .biteSizeBanner_c3e427),
+.custom-profile-theme .fullSizeInnerThemed_c69a7b:has(.bannerSVGWrapper_b32cc2 .fullSizeBanner_c3e427) {
     background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #008c99 100%);
 }
 
@@ -3108,6 +3116,7 @@ textarea,
 .userTagWithNickname_c9ccf6,
 .discordIcon_b06bc5,
 .roleName_e4010c,
+.roleName_f9575e,
 .username_be84f0 {
     color: white;
 }
